# taskmanagercli

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  test_missing_fields.json  test_special_chars.json
include/: FilterStrategy.h  SortStrategy.h  Storage.h  Task.h  TaskManager.h
src/: Storage.cpp  Task.cpp  TaskManager.cpp  main.cpp  ui_main.cpp
tests/: test_filter_strategies.cpp  test_sort_strategies.cpp  test_storage.cpp  test_task.cpp  test_task_manager.cpp
